--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-is": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.1.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
